--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_fonts: ^6.2.1
   dio: ^5.5.0+1
   provider: ^6.1.2
+  flutter_styled_toast: ^2.2.1
 
 dev_dependencies:
   flutter_test:
